[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/gfx/sprites/powerplant.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/sprites/apartment.png" type="Texture" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://assets/gfx/sprites/planet.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/sprites/bar.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 276.474

[sub_resource type="StreamTexture" id=2]
resource_local_to_scene = true
flags = 5
load_path = "res://.import/factory.png-511f58d2a3b3f08c311f8e6bbfc28779.stex"

[sub_resource type="AtlasTexture" id=3]
flags = 5
atlas = SubResource( 2 )
region = Rect2( 0, 300, 512, 600 )

[sub_resource type="StreamTexture" id=4]
flags = 5
load_path = "res://.import/mine.png-6e597bfb5a7c7612bb55dc80efe8800f.stex"

[sub_resource type="AtlasTexture" id=5]
flags = 5
atlas = SubResource( 4 )
region = Rect2( 0, 320, 512, 600 )

[sub_resource type="AtlasTexture" id=6]
flags = 5
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 512, 600 )

[sub_resource type="AtlasTexture" id=7]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 0, 310, 512, 600 )

[sub_resource type="AtlasTexture" id=8]
flags = 5
atlas = ExtResource( 5 )
region = Rect2( 0, 310, 512, 600 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="placing_area" type="Area2D" parent="."]
position = Vector2( 816.03, 353.575 )

[node name="preview_icon" type="Sprite" parent="placing_area"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 352.1, -196.78 )
rotation = -4.46638e-06
scale = Vector2( 0.063, 0.063 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="placing_area"]
shape = SubResource( 1 )

[node name="planet" type="Sprite" parent="placing_area"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="toolbox_bg" type="ColorRect" parent="."]
margin_right = 38.0
margin_bottom = 704.0
color = Color( 0.215686, 0.580392, 0.431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highlight" type="ColorRect" parent="."]
visible = false
margin_right = 30.0
margin_bottom = 30.0
color = Color( 1, 1, 1, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hud" type="CanvasLayer" parent="."]

[node name="hbox" type="HBoxContainer" parent="hud"]
margin_right = 54.0
margin_bottom = 704.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toolbox" type="VBoxContainer" parent="hud/hbox"]
margin_right = 40.0
margin_bottom = 704.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="factory_btn" type="ToolButton" parent="hud/hbox/toolbox"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = SubResource( 3 )
expand_icon = true

[node name="mine_btn" type="ToolButton" parent="hud/hbox/toolbox"]
margin_top = 44.0
margin_right = 40.0
margin_bottom = 84.0
rect_min_size = Vector2( 40, 40 )
focus_mode = 0
enabled_focus_mode = 0
icon = SubResource( 5 )
expand_icon = true

[node name="powerplant_btn" type="ToolButton" parent="hud/hbox/toolbox"]
margin_top = 88.0
margin_right = 40.0
margin_bottom = 128.0
rect_min_size = Vector2( 40, 40 )
focus_mode = 0
enabled_focus_mode = 0
icon = SubResource( 6 )
expand_icon = true

[node name="apartment_btn" type="ToolButton" parent="hud/hbox/toolbox"]
margin_top = 132.0
margin_right = 40.0
margin_bottom = 172.0
rect_min_size = Vector2( 40, 40 )
focus_mode = 0
enabled_focus_mode = 0
icon = SubResource( 7 )
expand_icon = true

[node name="bar_btn" type="ToolButton" parent="hud/hbox/toolbox"]
margin_top = 176.0
margin_right = 40.0
margin_bottom = 216.0
rect_min_size = Vector2( 40, 40 )
focus_mode = 0
enabled_focus_mode = 0
icon = SubResource( 8 )
expand_icon = true

[node name="placing_icon" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 0.063, 0.063 )

[connection signal="mouse_entered" from="placing_area" to="." method="_on_placing_area_mouse_entered"]
[connection signal="mouse_exited" from="placing_area" to="." method="_on_placing_area_mouse_exited"]
[connection signal="mouse_entered" from="hud/hbox/toolbox/factory_btn" to="." method="_on_toolbox_btn_mouse_entered" binds= [ 0 ]]
[connection signal="mouse_exited" from="hud/hbox/toolbox/factory_btn" to="." method="_on_toolbox_btn_mouse_exited" binds= [ 0 ]]
[connection signal="pressed" from="hud/hbox/toolbox/factory_btn" to="." method="_on_toolbox_btn_pressed" binds= [ 0 ]]
[connection signal="mouse_entered" from="hud/hbox/toolbox/mine_btn" to="." method="_on_toolbox_btn_mouse_entered" binds= [ 1 ]]
[connection signal="mouse_exited" from="hud/hbox/toolbox/mine_btn" to="." method="_on_toolbox_btn_mouse_exited" binds= [ 1 ]]
[connection signal="pressed" from="hud/hbox/toolbox/mine_btn" to="." method="_on_toolbox_btn_pressed" binds= [ 1 ]]
[connection signal="mouse_entered" from="hud/hbox/toolbox/powerplant_btn" to="." method="_on_toolbox_btn_mouse_entered" binds= [ 2 ]]
[connection signal="mouse_exited" from="hud/hbox/toolbox/powerplant_btn" to="." method="_on_toolbox_btn_mouse_exited" binds= [ 2 ]]
[connection signal="pressed" from="hud/hbox/toolbox/powerplant_btn" to="." method="_on_toolbox_btn_pressed" binds= [ 2 ]]
[connection signal="mouse_entered" from="hud/hbox/toolbox/apartment_btn" to="." method="_on_toolbox_btn_mouse_entered" binds= [ 3 ]]
[connection signal="mouse_exited" from="hud/hbox/toolbox/apartment_btn" to="." method="_on_toolbox_btn_mouse_exited" binds= [ 3 ]]
[connection signal="pressed" from="hud/hbox/toolbox/apartment_btn" to="." method="_on_toolbox_btn_pressed" binds= [ 3 ]]
[connection signal="mouse_entered" from="hud/hbox/toolbox/bar_btn" to="." method="_on_toolbox_btn_mouse_entered" binds= [ 4 ]]
[connection signal="mouse_exited" from="hud/hbox/toolbox/bar_btn" to="." method="_on_toolbox_btn_mouse_exited" binds= [ 4 ]]
[connection signal="pressed" from="hud/hbox/toolbox/bar_btn" to="." method="_on_toolbox_btn_pressed" binds= [ 4 ]]
